# UnitTest

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt
code/include/: myAddLib.h
code/src/: main.cpp  myAddLib.cpp
gtest/: CMakeLists.txt
gtest/src/: myAddLib_test.cpp
